Update docker file